--- a/estilo.css
+++ b/estilo.css
@@ -69,6 +69,7 @@ header p{
         max-width: 500px;
         padding-left: 10px;
         padding-right: 10px;
+        padding-bottom: 50px;
         margin:auto;
         text-shadow: 2px 2px  rgba(0, 0, 0, 0.493);
     }
@@ -93,8 +94,8 @@ nav > a {
 
 nav a:hover{
         background-color: var(--cor3);
-        color:var(--cor5)
-        text-transform:uppercase;
+        color:var(--cor5);
+        text-transform: uppercase;
 }
 
 /*A configuração do border queriamos somente as extremidades inferiores arredondadas configuramos separado com border-bottom-left-radius:*/
